<resources>
    <string name="app_name">eConnecto</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">WELCOME TO ECONNECTO</string>
    <string name="slide_1_desc">Unique and diversified for business growth.</string>
    <string name="slide_2_title">CONNECT BUSINESS SOCIALLY</string>
    <string name="slide_2_desc">Get connected to the latest business trends.</string>
    <string name="slide_3_title">FOLLOW BUSINESS</string>
    <string name="slide_3_desc">Follow business to get latest updates.</string>
    <string name="key_shared_prefs">key_shared_prefs</string>
    <string name="key_logged_in">key_logged_in</string>
    <string name="login_label">Login</string>
    <string name="do_not_have_an_account">Don\'t have an Account ? </string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="forgot_pswd">Forgot Password</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="email_id">Email ID*</string>
    <string name="confirm_pswd">Confirm Password</string>
    <string name="error_network_unavailable"> No internet found,Check your connection and Try again.</string>
    <string name="please_enter_username">Please enter  username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_must_have_atleast_8_character">Password must have atleast 8 character</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">eConnecto</string>
    <string name="nav_header_subtitle">e-connecto@support.com</string>
    <string name="key_serializable">key_serializable</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_valid_mobile_number">Please enter 10 digit mobile number</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_same_pswd">Please enter same password</string>
    <string name="share">Share App</string>
    <string name="help_faq">Help &amp; About Us</string>
    <string name="send_feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="you_are_sucessfully_logout">You are successfully logout.</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_really_want_to_logout">Do you really wants to Logout ?</string>
    <string name="please_enter_otp">Please enter otp which is sent to your Email ID.</string>
    <string name="enter_valid_otp">Enter valid otp</string>
    <string name="please_check_your_network_connection">Please Check your internet connection and Try again.</string>
    <string name="save_address">Save Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_valid_pincode">Please Enter valid pincode.</string>
    <string name="please_enter_city_name">Please enter city</string>
    <string name="please_enter_state">Please enter state.</string>
    <string name="key_otp_data">key_otp_data</string>
    <string name="key_mobile_no">key_mobile_no</string>
    <string name="change_pswd">Change Password</string>
    <string name="my_account">My Account</string>
    <string name="register">Register</string>
    <string name="my_business">My Business</string>
    <string name="new_order">New Order</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="select_app_to_share">Select App to share</string>
    <string name="key_login_data">key_login_data</string>
    <string name="key_new_order_data">key_new_order_data</string>
    <string name="key_business_status">key_business_status</string>
    <string name="no_data_available">No data available!</string>
    <string name="no_new_order_available">No Order available right now.</string>
    <string name="no_pending_order">No Order is pending.</string>
    <string name="contact_us">Contact Us</string>
    <string name="website_link"><a href="http://econnecto.com/"> www.econnecto.com</a></string>
    <string name="fb_link"><a href="https://m.facebook.com/econnecto/?ref=content_filter"> facebook.com/econnecto</a></string>
    <string name="insta_link"><a href="https://www.instagram.com/econnecto/"> instagram.com/econnecto</a></string>
    <string name="twitter_link"><a href="https://mobile.twitter.com/Econnecto1"> twitter.com/econnecto</a></string>
    <string name="playstore_link"><u>play.google.com/store/apps/econnecto</u></string>
    <string name="text_visit_our_website">Visit Our Website : </string>
    <string name="text_like_on_fb">Like Us on Facebook :</string>
    <string name="text_follow_us_on_insta">Follow Us on Instagram :</string>
    <string name="key_first_time_launch">key_first_time_launch</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_member_login_here">Already a member ? Login here..</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_registered_email">Enter Registered Email</string>
    <string name="send_otp">Send OTP</string>
    <string name="add_business">Add Business</string>
    <string name="add_your_business">Add Your Business</string>
    <string name="business_list">Business List</string>
    <string name="establish_year">Establishment year* </string>
    <string name="view_business">View Business</string>
    <string name="basic_details">Basic Details</string>
    <string name="other_details">Other Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="service_details">Service Details</string>
    <string name="no_business_available">No Business Available as of now.</string>
    <string name="do_you_want_to_unfollow">Do you want really want to Unfollow </string>
    <string name="business_dialog">Business Dialog (very short description)</string>
    <string name="business_name">Business Name*</string>
    <string name="category">Category*</string>
    <string name="detailed_business_description">Detailed Business Description</string>
    <string name="year_founded">Foundation year</string>
    <string name="awards_n_achievement">Awards and Achievements</string>
    <string name="address">Address</string>
    <string name="phone">Phone No.</string>
    <string name="alternate_phone">Alternate Phone</string>
    <string name="website">Website</string>
    <string name="charges">Charges</string>
    <string name="amount">Amount</string>
    <string name="business_details">Business Details</string>
    <string name="settings">Settings</string>
    <string name="please_enter_firstname">Please enter first name</string>
    <string name="please_enter_lastname">Please enter last name</string>
    <string name="please_select_age">Please select age group.</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="key_biz_id">key_biz_id</string>
    <string name="age_group">Age Group</string>
    <string name="followers">Followers</string>
    <string name="something_wrong_from_server_plz_try_again">Oops! Something went wrong. Please try again</string>
    <string name="contact_n_address">Contact &amp; Address </string>
    <string name="key_user_email">key_user_email</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="register_successful_plz_login">Your mobile number is verified now.\nPlease login with mobile no and password</string>
    <string name="retry">Retry</string>
    <string name="you_need_to_login_first_to_follow_a_business">You need to Login first to follow a Business.</string>
    <string name="please_enter_business_name">Please Enter Business Name</string>
    <string name="please_enter_a_short_description">Please enter a short description or tagline of your business.</string>
    <string name="Select_Category">Select Category</string>
    <string name="please_select_business_category">Please select business category</string>
    <string name="please_enter_a_detail_description">Please enter description of your business.</string>
    <string name="please_enter_foundation_year_of_business">Please enter Foundation Year of the business.</string>
    <string name="add_business_success_msg">Congratulations !!  Your business is added Successfully.</string>
    <string name="please_enable_your_network_connection_and_launch_again">Please enable your network connection and launch again.</string>
    <string name="is_following">is_following</string>
    <string name="you_need_to_login_first_to_add_a_business">You need to login first to add a Business.</string>
    <string name="congratulations_your_registration_is_successfull">Congratulations!! Your registration is completed successfully.</string>
    <string name="enter_new_pswd">Enter New Password</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="verify_your_email">Verify your Email</string>
    <string name="otp_is_sent_to_your_registered_email_plz_enter_same">An OTP will be sent to  your registered Email ID. Please enter OTP and New Password on the next screen.</string>
    <string name="please_enter_otp_sent_on_your_email">Please enter OTP sent to your email id</string>
    <string name="request_otp">request_otp</string>
    <string name="enter_otp_sent_to_your_email">Enter OTP Sent to your Email</string>
    <string name="reset_pwd">reset_pwd</string>
    <string name="please_enter_valid_OTP">Please enter valid OTP.</string>
    <string name="otp_is_sent_to_your_registered_email_plz_enter_otp_for_verification">An OTP wii be sent to your registered Email ID. Please enter the OTP to verify the Email</string>
    <string name="verify_email">verify_email</string>
    <string name="congrats_your_account_is_verified_now">Congrats !! Your email is verfied now.</string>
    <string name="key_email_verified">key_email_verified</string>
    <string name="you_need_to_verify_your_email_to_add_a_business">You need to Verfiy your email to add a bussiness</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="short_description">Short Description*</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode*</string>
    <string name="address_details">Address Details</string>
    <string name="country">Country</string>
    <string name="alternate_mobile">Alternate Mobile</string>
    <string name="telephone_with_code">Telephone with code</string>
    <string name="address_line1">Address Line 1*</string>
    <string name="address_line2">Address Line 2</string>
    <string name="landmark">Landmark</string>
    <string name="established_year">Establishment year</string>
    <string name="add_photos">Add Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="operatingHours">Operating Hours</string>
    <string name="product_n_services">Product and Services</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="add_more_product">Add products</string>
    <string name="service_name">Service Name</string>
    <string name="services">Services</string>
    <string name="add_more_services">Add services</string>
</resources>