<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="false"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.activities.mybiz.OperatingHour">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10dp"
            android:background="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/product_n_services"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_actionbar_title_text" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/product"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_x_large_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3dp"
            android:hint="@string/product_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editProductName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:inputType="text"
                android:maxLength="55" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add"
            android:gravity="center_horizontal"
            android:text="@string/add_more_product"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_large_text" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="vertical"
        android:padding="@dimen/_20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/services"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_x_large_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3dp"
            android:hint="@string/service_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editServiceName1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:inputType="text"
                android:maxLength="55" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add"
            android:gravity="center_horizontal"
            android:text="@string/add_more_services"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_large_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/textSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:background="@drawable/rounded_background"
        android:paddingHorizontal="@dimen/_15dp"
        android:paddingVertical="@dimen/_5dp"
        android:text="@string/submit"
        android:textColor="@color/colorWhite" />


</LinearLayout>