<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="@dimen/_20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/add_photos"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/font_x_large_text" />


    <TextView
        android:id="@+id/textTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/take_photo"
        android:visibility="gone"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/font_large_text" />

    <TextView
        android:id="@+id/textSelectGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:text="@string/select_from_gallery"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/font_large_text" />

</LinearLayout>